--- a/frontend/src/components/authorization/singup/Singup.module.scss
+++ b/frontend/src/components/authorization/singup/Singup.module.scss
@@ -74,7 +74,7 @@
 	max-width: 90%;
 	text-align: center;
 	line-height: 1.1rem;
-	color: $color-gray;
+	color: $color-gray-text;
 }
 
 .input__container {
@@ -95,7 +95,7 @@
 }
 
 .input__label {
-	color: $color-gray;
+	color: $color-gray-text;
 	font-weight: 500;
 }
 
