--- a/frontend/src/components/search/Search.module.scss
+++ b/frontend/src/components/search/Search.module.scss
@@ -1,6 +1,7 @@
 @import '../../variables.scss';
 
 .container {
+	position: relative;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -10,61 +11,32 @@
 
 	gap: 50px;
 
-	.input {
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		position: relative;
+	input {
+		box-sizing: border-box;
 		width: 100%;
 		height: 50px;
-		border: 2px solid $color-gray;
 
-		&::before,
-		&::after {
-			content: '';
-			width: 2px;
-			height: 2px;
-			position: absolute;
-			background-color: $color-background;
-			transition: all 0.2s linear;
-		}
+		background-color: $color-background;
+		outline: none;
+		border: 2px solid $color-link;
+		border-radius: 10px;
 
-		&::before {
-			width: calc(100% + 6px);
-			height: calc(100% - 16px);
-			top: 8px;
-			left: -3px;
-		}
+		padding: 10px;
+	}
 
-		&::after {
-			width: calc(100% - 16px);
-			height: calc(100% + 6px);
-			top: -3px;
-			left: 8px;
-		}
+	.search {
+		box-sizing: border-box;
+		width: 30px;
+		padding: 7px;
+		border-radius: 10px;
+		border: none;
+		position: absolute;
+		right: 10px;
+		background-color: $color-light-gray;
+		cursor: pointer;
 
 		&:hover {
-			cursor: pointer;
-		}
-
-		&:hover::before {
-			height: calc(100% - 32px);
-			top: 16px;
-		}
-
-		&:hover::after {
-			width: calc(100% - 32px);
-			left: 16px;
-		}
-
-		input {
-			position: absolute;
-			width: 90%;
-			height: 48px;
-			background-color: $color-background;
-			outline: none;
-			text-align: center;
-			z-index: 10;
+			background-color: $color-gray;
 		}
 	}
 }
