--- a/frontend/src/variables.scss
+++ b/frontend/src/variables.scss
@@ -1,6 +1,7 @@
 $color-black: #212326;
-$color-gray: #8b8e98;
+$color-gray: #e0e0e0;
 $color-light-gray: #e8e8e8;
+$color-gray-text: #a8a8a8;
 $color-error: #fb4e4e;
 $color-error-background: #ffefef;
 $color-background: #f3f3f3;
