--- a/frontend/src/pages/MainPage/MainPage.module.scss
+++ b/frontend/src/pages/MainPage/MainPage.module.scss
@@ -1,4 +1,4 @@
-@import '../../variables.scss';
+@import '../../styles/variables.scss';
 
 .container {
 	box-sizing: border-box;
@@ -13,7 +13,7 @@
 		display: flex;
 		width: 100%;
 		flex-direction: column;
-		justify-content: start;
+		justify-content: flex-start;
 		gap: 10px;
 		box-sizing: border-box;
 		
