--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -2,25 +2,25 @@
 
 @font-face {
 	font-family: 'TTNorms';
-	src: url('fonts/TTNorms-Light.woff') format('woff');
+	src: url('../fonts/TTNorms-Light.woff') format('woff');
 	font-weight: 300;
 }
 
 @font-face {
 	font-family: 'TTNorms';
-	src: url('fonts/TTNorms-Regular.woff') format('woff');
+	src: url('../fonts/TTNorms-Regular.woff') format('woff');
 	font-weight: 400;
 }
 
 @font-face {
 	font-family: 'TTNorms';
-	src: url('fonts/TTNorms-Medium.woff') format('woff');
+	src: url('../fonts/TTNorms-Medium.woff') format('woff');
 	font-weight: 500;
 }
 
 @font-face {
 	font-family: 'TTNorms';
-	src: url('fonts/TTNorms-Bold.woff') format('woff');
+	src: url('../fonts/TTNorms-Bold.woff') format('woff');
 	font-weight: 700;
 }
 
@@ -52,7 +52,7 @@ body {
 	width: 100%;
 	height: 100%;
 	background-color: $color-background;
-	font-size: 16px;
+	font-size: 14px;
 	font-family: 'TTNorms', -apple-system, BlinkMacSystemFont, 'Segoe UI',
 		'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
 		'Helvetica Neue', sans-serif;
