--- a/frontend/src/pages/MainPage/MainPage.module.scss
+++ b/frontend/src/pages/MainPage/MainPage.module.scss
@@ -34,5 +34,15 @@
 		}
 	}
 
+	.annot {
+		box-sizing: border-box;
+		padding: 10px;
+		border: 1px solid $color-gray;
+		border-radius: 10px;
+		span {
+			font-size: 16px;
+		}
+	}
+
 	padding-bottom: 50px;
 }
