--- a/frontend/src/components/table/head/Head.module.scss
+++ b/frontend/src/components/table/head/Head.module.scss
@@ -6,7 +6,7 @@
 	justify-content: space-between;
 	width: 100%;
 	padding: 10px;
-	border: 1px solid $color-gray;
+	border: 1px solid $color-link;
 	border-radius: 10px;
 
 	div {
